--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -1,179 +1,194 @@
 <!DOCTYPE html>
 <html lang="{{ session.language }}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16">
-    {% if '127.0.0' not in request.url %}
-        <link rel="manifest" href="/static/manifest.json">
+  <meta charset="UTF-8">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16">
+  {% if '127.0.0' not in request.url %}
+    <link rel="manifest" href="/static/manifest.json">
+  {% endif %}
+  <link rel="stylesheet" href="/static/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css">
+  <link rel="stylesheet" href="/static/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/static/node_modules/jstree/dist/themes/default/style.min.css">
+  <link rel="mask-icon" href="/static/safari-pinned-tab.svg">
+  <link rel="stylesheet" href="/static/css/style.css?v={{ config.VERSION }}">
+  <script src="/static/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="/static/node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+  <script src="/static/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="/static/node_modules/jquery-validation/dist/jquery.validate.min.js"></script>
+  <script src="/static/node_modules/jstree/dist/jstree.min.js"></script>
+  <script src="/static/node_modules/tinymce/tinymce.min.js"></script>
+  <script src="/static/node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="/static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/static/node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
+  <script src="/static/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+  <script src="/static/node_modules/bootstrap-autocomplete/dist/latest/bootstrap-autocomplete.min.js"></script>
+  {% if gis_data %}
+    {% include "map.html" %}
+  {% endif %}
+  <script>
+    bookmark_csrf_token = '{{ csrf_token() }}';
+    minimumPasswordLength = {{ session.settings.minimum_password_length }};
+    show = '{{ _('show')|uc_first }}';
+    hide = '{{ _('hide')|uc_first }}';
+    moreText = '{{ _('show more')|uc_first }}';
+    lessText = '{{ _('show less')|uc_first }}';
+    maxFileSize = {{ session.settings.file_upload_max_size }}
+  </script>
+  <script src="/static/js/functions.js"></script>
+  <script src="/static/js/forms.js"></script>
+  {% set js_translation_file = '/static/js/messages_' + session.language + '.js' %}
+  {% if js_translation_file|test_file %}
+    <script src="{{ js_translation_file }}"></script>
+  {% endif %}
+  <title>
+    {{ session.settings.site_name }}
+    {% if title %}
+      - {{ title|uc_first }}
+    {% elif entity %}
+      - {{ entity.name }}
     {% endif %}
-    <link rel="stylesheet" href="/static/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/static/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="/static/node_modules/jstree/dist/themes/default/style.min.css">
-    <link rel="mask-icon" href="/static/safari-pinned-tab.svg">
-    <link rel="stylesheet" href="/static/css/style.css?v={{ config.VERSION }}">
-    <script src="/static/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/static/node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="/static/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="/static/node_modules/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="/static/node_modules/jstree/dist/jstree.min.js"></script>
-    <script src="/static/node_modules/tinymce/tinymce.min.js"></script>
-    <script src="/static/node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="/static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/static/node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
-    <script src="/static/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
-    <script src="/static/node_modules/bootstrap-autocomplete/dist/latest/bootstrap-autocomplete.min.js"></script>
-    {% if gis_data %}
-        {% include "map.html" %}
-    {% endif %}
-    <script>
-        bookmark_csrf_token = '{{ csrf_token() }}';
-        minimumPasswordLength = {{ session.settings.minimum_password_length }};
-        show = '{{ _('show')|uc_first }}';
-        hide = '{{ _('hide')|uc_first }}';
-        moreText = '{{ _('show more')|uc_first }}';
-        lessText = '{{ _('show less')|uc_first }}';
-        maxFileSize =
-        {{ session.settings.file_upload_max_size }}
-    </script>
-    <script src="/static/js/functions.js"></script>
-    <script src="/static/js/forms.js"></script>
-    {% set js_translation_file = '/static/js/messages_' + session.language + '.js' %}
-    {% if js_translation_file|test_file %}
-        <script src="{{ js_translation_file }}"></script>
-    {% endif %}
-    <title>
-        {{ session.settings.site_name }}
-        {% if title %}
-            - {{ title|uc_first }}
-        {% elif entity %}
-            - {{ entity.name }}
-        {% endif %}
-    </title>
+  </title>
+  {% block script %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"><img src="{{ get_logo|safe }}" id="logo" alt="Logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                {% if current_user.is_authenticated %}
-                    {{ entity|display_menu(origin=origin) }}
-                {% endif %}
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/"><img src="{{ get_logo|safe }}" id="logo" alt="Logo"></a>
+  <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      {% if current_user.is_authenticated %}
+        {{ entity|display_menu(origin=origin) }}
+      {% endif %}
+    </div>
+  </div>
+  <div style="float: right;">
+    {% if current_user.is_authenticated %}
+      <div id="index-search-button" class="iconbutton">
+        <div id="index-search">
+          <form
+              class="form-group has-search"
+              method="post"
+              action="{{ url_for('search_index') }}"
+              style="display:inline-flex">
+            {{ search_form.csrf_token }}
+            {{ search_form.term }}
+            <button type="submit" class="btn btn-link search-button">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
         </div>
-        <div style="float: right;">
-            {% if current_user.is_authenticated %}
-                <div id="index-search-button" class="iconbutton">
-                    <div id="index-search">
-                        <form  class="form-group has-search" method="post" action="{{ url_for('search_index') }}" style="display:inline-flex">
-                            {{ search_form.csrf_token }}
-                            {{ search_form.term }}
-                            <button type="submit" class="btn btn-link search-button">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            {% endif %}
-            <div class="btn-group btn-group-toggle">
-                {% for language in config.LANGUAGES.keys()|sort %}
-                    {% if 'language' in session and session.language == language %}
-                        <span class="btn btn-secondary active btn-sm">{{ language|upper }}</span>
-                    {% else %}
-                        <a class="btn btn-secondary btn-sm" href="{{ url_for('set_locale', language=language) }}">{{ language|upper }}</a>
-                    {% endif %}
-                {% endfor %}
-            </div>
-            {% if current_user.is_authenticated %}
-                <div class="iconbutton dropdown">
-                    <a  class="nav-link dropdown-toggle"
-                        data-toggle="dropdown"
-                        href="#"
-                        role="button"
-                        aria-haspopup="true"
-                        style="padding: 0px!important;"
-                        aria-expanded="false"><span><i class="fa fa-cog"></i></span></a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="{{ url_for('profile_index') }}">
-                            <span>{{ _('profile')|uc_first }}</span>
-                        </a>
-                        <a class="dropdown-item" href="/admin">
-                            <span>{{ _('admin')|uc_first }}</span>
-                        </a>
-                        {% if 'contact'|display_content_translation %}
-                            <a class="dropdown-item" href="{{ url_for('index_content', item='contact') }}">
-                                <span>{{ _('contact')|uc_first }}</span>
-                            </a>
-                        {% endif %}
-                        {% if 'legal_notice'|display_content_translation %}
-                            <a class="dropdown-item" href="{{ url_for('index_content', item='legal_notice') }}">
-                                <span>{{ _('legal_notice')|uc_first }}</span>
-                            </a>
-                        {% endif %}
-                        <a class="dropdown-item" href="/logout"><span>{{ _('logout')|uc_first }}</span></a>
-                    </div>
-                </div>
-            {% else %}
-                {% if 'contact'|display_content_translation %}
-                    <div class="iconbutton"
-                         data-toggle="popover"
-                         data-placement="bottom"
-                         data-content="{{ _('contact')|uc_first }}"
-                         data-trigger="hover">
-                        <a href="{{ url_for('index_content', item='contact') }}" >
-                            <span><i class="fas fa-at"></i></span>
-                        </a>
-                    </div>
-                {% endif %}
-                {% if 'legal_notice'|display_content_translation %}
-                    <div class="iconbutton"
-                         data-toggle="popover"
-                         data-placement="bottom"
-                         data-content="{{ _('legal_notice')|uc_first }}"
-                         data-trigger="hover">
-                        <a href="{{ url_for('index_content', item='legal_notice') }}" >
-                            <span><i class="fas fa-balance-scale"></i></span>
-                        </a>
-                    </div>
-                {% endif %}
-                <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
-            {% endif %}
-        </div>
-    </nav>
-    <nav aria-label="breadcrumb">
-        <div class="breadcrumb">
-            {{ crumbs|breadcrumb }}
-            <div id="site-name-and-version">
-                {{ session.settings.site_name }}
-                <a href="{{ url_for('index_changelog') }}">{{ config.VERSION }}</a>
-            </div>
-        </div>
-    </nav>
-    <noscript>
-        <div class="error">{{ _('warning no js') }}</div>
-    </noscript>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }}" role="alert">
-                    {{ message|uc_first }}
-                </div>
-            {% endfor %}
+      </div>
+    {% endif %}
+    <div class="btn-group btn-group-toggle">
+      {% for language in config.LANGUAGES.keys()|sort %}
+        {% if 'language' in session and session.language == language %}
+          <span class="btn btn-secondary active btn-sm">{{ language|upper }}</span>
+        {% else %}
+          <a class="btn btn-secondary btn-sm" href="{{ url_for('set_locale', language=language) }}">
+            {{ language|upper }}
+          </a>
         {% endif %}
-    {% endwith %}
-    <main>
-        <div id="content">
-            <div style="float:left" class="container-fluid">
-                {% block content %}{% endblock %}
-            </div>
+      {% endfor %}
+    </div>
+    {% if current_user.is_authenticated %}
+      <div class="iconbutton dropdown">
+        <a
+            class="nav-link dropdown-toggle"
+            data-toggle="dropdown"
+            href="#"
+            role="button"
+            aria-haspopup="true"
+            style="padding: 0px!important;"
+            aria-expanded="false"><span><i class="fa fa-cog"></i></span></a>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a class="dropdown-item" href="{{ url_for('profile_index') }}">
+            <span>{{ _('profile')|uc_first }}</span>
+          </a>
+          <a class="dropdown-item" href="/admin">
+            <span>{{ _('admin')|uc_first }}</span>
+          </a>
+          {% if 'contact'|display_content_translation %}
+            <a class="dropdown-item" href="{{ url_for('index_content', item='contact') }}">
+              <span>{{ _('contact')|uc_first }}</span>
+            </a>
+          {% endif %}
+          {% if 'legal_notice'|display_content_translation %}
+            <a class="dropdown-item" href="{{ url_for('index_content', item='legal_notice') }}">
+              <span>{{ _('legal_notice')|uc_first }}</span>
+            </a>
+          {% endif %}
+          <a class="dropdown-item" href="/logout"><span>{{ _('logout')|uc_first }}</span></a>
         </div>
-    </main>
+      </div>
+      {% else %}
+        {% if 'contact'|display_content_translation %}
+          <div
+              class="iconbutton"
+              data-toggle="popover"
+              data-placement="bottom"
+              data-content="{{ _('contact')|uc_first }}"
+              data-trigger="hover">
+            <a href="{{ url_for('index_content', item='contact') }}">
+              <span><i class="fas fa-at"></i></span>
+            </a>
+          </div>
+        {% endif %}
+        {% if 'legal_notice'|display_content_translation %}
+          <div
+              class="iconbutton"
+              data-toggle="popover"
+              data-placement="bottom"
+              data-content="{{ _('legal_notice')|uc_first }}"
+              data-trigger="hover">
+            <a href="{{ url_for('index_content', item='legal_notice') }}">
+              <span><i class="fas fa-balance-scale"></i></span>
+            </a>
+        </div>
+      {% endif %}
+      <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
+    {% endif %}
+  </div>
+</nav>
+<nav aria-label="breadcrumb">
+  <div class="breadcrumb">
+    {{ crumbs|breadcrumb }}
+    <div id="site-name-and-version">
+      {{ session.settings.site_name }}
+      <a href="{{ url_for('index_changelog') }}">{{ config.VERSION }}</a>
+    </div>
+  </div>
+</nav>
+<noscript>
+  <div class="error">{{ _('warning no js') }}</div>
+</noscript>
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }}" role="alert">
+        {{ message|uc_first }}
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+<main>
+  <div id="content">
+    <div style="float:left" class="container-fluid">
+      {% block content %}{% endblock %}
+    </div>
+  </div>
+</main>
 </body>
 </html>
