--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -1,29 +1,32 @@
 {% extends "layout.html" %}
 {% block title_name %} - SQL{% endblock %}
-{% block breadcrumb %}
-
-{% endblock %}
 {% block content %}
-    <div class="toolbar">
-        {{ 'admin/execute_sql'|manual }}
-    </div>
-    <h2 class="error">
-        {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
-    </h2>
-    <p>
-        <input id="sql_risk_aware" type="checkbox">
-        {{ _("I'm aware of the risk and have read the documentation.") }}
-    </p>
-    <div class="toolbar">
-        {{ _('proceed')|button(id_='proceed_button', url='#') }}
-    </div>
-    <script>
-        $('#sql_risk_aware').change(function() {
-            if (this.checked) {
-                $("#proceed_button").attr("href", "{{ url_for('sql_execute') }}")
-            } else {
-                $("#proceed_button").attr("href", "")
-            }
-        });
-    </script>
+  <div class="toolbar">
+    {{ 'admin/execute_sql'|manual }}
+  </div>
+  <h2 class="error">
+    {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an
+    unusable application!') }}
+  </h2>
+  <p>
+    <input id="sql_risk_aware" type="checkbox">
+    {{ _("I'm aware of the risk and have read the documentation.") }}
+  </p>
+  <div class="toolbar">
+    {{ _('proceed')|button(id_='proceed_button', url='#') }}
+  </div>
+{% endblock %}
+
+{% block script %}
+  <script>
+    $(document).ready(function () {
+      $('#sql_risk_aware').change(function() {
+          if (this.checked) {
+              $("#proceed_button").attr("href", "{{ url_for('sql_execute') }}")
+          } else {
+              $("#proceed_button").attr("href", "")
+          }
+      });
+    })
+  </script>
 {% endblock %}
