--- a/openatlas/templates/user/password.html
+++ b/openatlas/templates/user/password.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-    {{ form|display_form('password-form') }}
-    <script>
-        $(document).ready(function () {
-            $("#show_passwords").after(function() {
-                return '<span class="{{ config.CSS.button.primary }}" id="generate-password">{{ _('generate password')|uc_first }}</span>';
-            });
-        });
-    </script>
+  {{ form|display_form('password-form') }}
+{% endblock %}
+{% block script %}
+  <script>
+    $(document).ready(function () {
+      $("#show_passwords").after(function() {
+        return '<span class="{{ config.CSS.button.primary }}" id="generate-password">{{ _('generate password')|uc_first }}</span>';
+      });
+    });
+  </script>
 {% endblock %}
