Refactoring type system

--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -81,16 +81,15 @@
                           {{ _('multiple') if node.multiple else _('single') }}
                         </p>
                       {% endif %}
-                      {% if node.forms %}
+                      {% if node.classes %}
                         <p style="margin-top:0;">
                           <strong>{{ _('classes')|uc_first }}</strong>:
-                          {% for form in node.forms.values() %}
-                            {{ g.classes[form.name].label if form.name in g.classes else
-                            _(form.name|replace('_', ' '))|uc_first }}{{ "," if not loop.last }}
+                          {% for class_ in node.classes %}
+                            {{ g.classes[class_].label }}{{ "," if not loop.last }}
                           {% endfor %}
                         </p>
                       {% endif %}
-                      {% if node.forms and node.name not in config.PROPERTY_TYPES %}
+                      {% if node.classes and node.name not in config.PROPERTY_TYPES %}
                         {{ _('untyped entities')|uc_first }}:
                         <a href="{{ url_for('show_untyped_entities', id_=node.id) }}">{{ _('show') }}</a>
                       {% endif %}
