--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,48 +1,49 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="toolbar">
-        {{ 'tools/model'|manual }}
-    </div>
-    <div style="float:left">
-        <a href="/static/images/model/openatlas_schema.png">
-            <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema">
-        </a><br>
-        <a href="/static/images/model/openatlas_schema2.png">
-            <img src="/static/images/model/openatlas_schema2.png" style="width:500px" alt="OpenAtlas schema">
-        </a>
-    </div>
-    <div style="float:left;margin-left:1em;">
-        <p>
-            {{ _('browse')|uc_first }}:
-            <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a>,
-            <a href="{{ url_for('property_index') }}">{{ _('properties')|uc_first }}</a>
-        </p>
-        <p style="font-weight: bold;">
-            {{ _('check for valid links')|uc_first }}
-        </p>
-        {{ form|display_form() }}
-        {% if result %}
-            <p style="margin-top:1em;">
-                {{ _('result for')|uc_first }}
-                {{ result.domain|link|safe }} >
-                {{ result.property|link|safe }} >
-                {{ result.range|link|safe }}
-            </p>
-            {% if result.domain_valid and result.range_valid %}
-                <p>{{ _('valid link')|uc_first }}<br>
-            {% elif not result.domain_valid %}
-                <p>
-                    <span class="error">{{ _('wrong domain')|uc_first }}</span>
-                    {{ result.domain|link|safe }} {{ _('for') }}
-                    {{ result.property|link|safe }}
-                </p>
-            {% elif not result.range_valid %}
-                <p>
-                    <span class="error">{{ _('wrong range')|uc_first }}</span>
-                    {{ result.range|link|safe }} {{ _('for') }}
-                    {{ result.property|link|safe }}
-                </p>
-            {% endif %}
-        {% endif %}
-    </div>
+<div class="toolbar">
+  {{ 'tools/model'|manual }}
+</div>
+<div style="float:left">
+  <a href="/static/images/model/openatlas_schema.png">
+    <img class="schema_image" src="/static/images/model/openatlas_schema.png" alt="Schema">
+  </a><br>
+  <a href="/static/images/model/openatlas_schema2.png">
+    <img class="schema_image" src="/static/images/model/openatlas_schema2.png" alt="Schema">
+  </a>
+</div>
+<div style="float:left;margin-left:1em;">
+  <p>
+    {{ _('browse')|uc_first }}:
+    <a href="{{ url_for('cidoc_class_index') }}">CIDOC {{ _('classes')|uc_first }}</a>,
+    <a href="{{ url_for('property_index') }}">CIDOC {{ _('properties')|uc_first }}</a>,
+    <a href="{{ url_for('openatlas_class_index') }}">OpenAtlas {{ _('classes')|uc_first }}</a>
+  </p>
+  <p style="font-weight: bold;">
+    {{ _('check for valid links')|uc_first }}
+  </p>
+  {{ form|display_form() }}
+  {% if result %}
+    <p style="margin-top:1em;">
+      {{ _('result for')|uc_first }}
+      {{ result.domain|link|safe }} >
+      {{ result.property|link|safe }} >
+      {{ result.range|link|safe }}
+    </p>
+    {% if result.domain_valid and result.range_valid %}
+      <p>{{ _('valid link')|uc_first }}<br>
+    {% elif not result.domain_valid %}
+      <p>
+        <span class="error">{{ _('wrong domain')|uc_first }}</span>
+        {{ result.domain|link|safe }} {{ _('for') }}
+        {{ result.property|link|safe }}
+      </p>
+    {% elif not result.range_valid %}
+      <p>
+        <span class="error">{{ _('wrong range')|uc_first }}</span>
+        {{ result.range|link|safe }} {{ _('for') }}
+        {{ result.property|link|safe }}
+      </p>
+    {% endif %}
+  {% endif %}
+</div>
 {% endblock %}
