--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -5,8 +5,7 @@
     {{ 'admin/execute_sql'|manual }}
   </div>
   <h2 class="error">
-    {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an
-    unusable application!') }}
+    {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
   </h2>
   <p>
     <input id="sql_risk_aware" type="checkbox">
