Renamed nodes to types

--- a/openatlas/templates/forms/tree_select.html
+++ b/openatlas/templates/forms/tree_select.html
@@ -26,7 +26,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">
-                    {{ g.nodes[field.id|int].name|uc_first }}
+                    {{ g.types[field.id|int].name|uc_first }}
                 </h5>
                 <button
                     type="button"
