--- a/openatlas/templates/util/profile_image.html
+++ b/openatlas/templates/util/profile_image.html
@@ -17,8 +17,6 @@
            {{ _('no preview available')|uc_first }}
         {% endif %}
     {% else %}
-        <a href="{{ url_for('entity_view', id_=entity.image_id) }}">
-            <img style="{{ style }}" alt="image" src="{{ src }}">
-        </a>
+        <a href="{{ url_for('view', id_=entity.image_id) }}"><img style="{{ style }}" alt="image" src="{{ src }}"></a>
     {% endif %}
 </div>
