--- a/openatlas/templates/util/api_links.html
+++ b/openatlas/templates/util/api_links.html
@@ -24,7 +24,7 @@
 
     <div class="btn-group mr-2">
         <a class="{{ config.CSS.button.primary }}"
-           href=" {{ url_for('api.entity', id_=entity.id, format='rdf-xml') }}"
+           href=" {{ url_for('api.entity', id_=entity.id, format='xml') }}"
            target="_blank">
             RDF-XML
         </a>
