--- a/openatlas/templates/index/feedback.html
+++ b/openatlas/templates/index/feedback.html
@@ -1,32 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-    <p>
-        {{ _('feedback intro') }}:
-    </p>
-    <ul>
-        <li>
-            <p>
-                {{ _('feedback redmine') }}:
-                <a href="https://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener noreferrer">
-                    https://redmine.openatlas.eu
-                </a>
-            </p>
-        </li>
-        {% if session.settings.mail_recipients_feedback[0] %}
-            <li>
-                <p>
-                    {{ _('feedback mail') }}
-                    <a href="mailto:{{ session.settings.mail_recipients_feedback[0] }}">
-                        {{ session.settings.mail_recipients_feedback[0] }}
-                    </a>
-                </p>
-            </li>
-        {% endif %}
-        {% if session.settings.mail and session.settings.mail_recipients_feedback %}
-            <li>
-                <p>{{ _('feedback_form') }}:</p>
-                {{ form|display_form('feedback-form') }}
-            </li>
-        {% endif %}
-    </ul>
+<p>
+  {{ _('feedback intro') }}:
+</p>
+  <ul>
+    <li>
+      <p>
+        {{ _('feedback redmine') }}:
+        <a href="https://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener noreferrer">https://redmine.openatlas.eu</a>
+      </p>
+    </li>
+    {% if g.settings.mail_recipients_feedback[0] %}
+      <li>
+        <p>
+          {{ _('feedback mail') }}
+          <a href="mailto:{{ g.settings.mail_recipients_feedback[0] }}">{{ g.settings.mail_recipients_feedback[0] }}</a>
+        </p>
+      </li>
+    {% endif %}
+      {% if g.settings.mail and g.settings.mail_recipients_feedback %}
+      <li>
+        <p>{{ _('feedback_form') }}:</p>
+        {{ form|display_form('feedback-form') }}
+      </li>
+    {% endif %}
+  </ul>
 {% endblock %}
