--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -19,7 +19,7 @@
                 {{ _('want a new feature or experience any problems')|uc_first }}:
                 {{ _('tell us about it')|button(url_for('index_feedback')) }}
             </p>
-            {% if session.settings.mail and not current_user.settings.newsletter %}
+            {% if g.settings.mail and not current_user.settings.newsletter %}
                 <p>
                     {{ _('want to receive updates? Activate the newsletter in your')|uc_first }}
                     {{ _('profile')|button(url_for('profile_index')) }}
