--- a/openatlas/templates/type/index.html
+++ b/openatlas/templates/type/index.html
@@ -5,34 +5,21 @@
 </div>
 <div>
   <ul class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" role="tab" aria-selected="true" href="#menu-tab-standard">
-        {{ _('standard types')|uc_first }}
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-custom">
-        {{ _('custom types')|uc_first }}
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-value">
-        {{ _('value types')|uc_first }}
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-place">
-        {{ _('places')|uc_first }}
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#menu-tab-system">
-        {{ _('system')|uc_first }}
-      </a>
-    </li>
+    {% for category in types %}
+      <li class="nav-item">
+        <a
+            class="nav-link"
+            data-toggle="tab"
+            role="tab"
+            aria-selected="{% if loop.index == 1 %}true{% else %}false{% endif %}"
+            href="#menu-tab-{{category}}">
+          {{ _(category + ' types')|uc_first }}
+        </a>
+      </li>
+    {% endfor %}
   </ul>
   <div class="tab-content" id="menuTabContent">
-    {% for category in ['standard', 'custom', 'value', 'place', 'system'] %}
+    {% for category in types %}
       <div class="tab-pane fade" role="tabpanel" id="menu-tab-{{ category }}" style="padding: 0;">
         <div class="accordion" id="TypeAccordion">
           {% for type_, tree in types[category].items() %}
