--- a/openatlas/templates/anthropology/sex.html
+++ b/openatlas/templates/anthropology/sex.html
@@ -2,7 +2,5 @@
 {% block content %}
     {{ buttons|button_bar }}
     <h1>{{ _('sex estimation')|uc_first }} - {{ entity.name }}</h1>
-    {% for type, value in entity.types.items() %}
-        {{ type.name }} - {{ value }}<br>
-    {% endfor %}
+    {{ table.display() }}
 {% endblock %}
