--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -19,7 +19,7 @@
     <a href="{{ url_for('openatlas_class_index') }}">OpenAtlas {{ _('classes')|uc_first }}</a>
   </p>
   <p style="font-weight: bold;">
-    {{ _('check for valid links')|uc_first }}
+    {{ _('check for valid links')|uc_first }} (CIDOC CRM 7.1.1)
   </p>
   {{ form|display_form() }}
   {% if result %}
