--- a/openatlas/templates/entity/index.html
+++ b/openatlas/templates/entity/index.html
@@ -17,6 +17,6 @@
     {% endif %}
   </div>
   {% if class_ == 'place' %}
-    <script src="/static/js/map/map.js"></script>
+    <script src="/static/js/map/map_new.js"></script>
   {% endif %}
 {% endblock %}
