--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -38,8 +38,8 @@
             <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
             <script src="/static/vendor/leaflet-1.3.4/EasyButton-2.3.0/src/easy-button.js"></script>
             <script src="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.js"></script>
-            <script src="/static/js/map/map.js"></script>
-            <script src="/static/js/map/draw.js"></script>
+            <script src="/static/js/map/map_new.js"></script>
+            <script src="/static/js/map/draw_new.js"></script>
         </div>
     {% endif %}
     {{ view_name|display_citation_example }}
