--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -36,11 +36,10 @@
             <div class="col-xl-8">
                 <div id="map" class="map"></div>
             </div>
-            <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
-            <script src="/static/vendor/leaflet-1.3.4/EasyButton-2.3.0/src/easy-button.js"></script>
-            <script src="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.js"></script>
-            <script src="/static/js/map/map.js"></script>
-            <script src="/static/js/map/draw.js"></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css"/>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+            <script src="/static/js/map/map_new.js"></script>
+            <script src="/static/js/map/draw_new.js"></script>
         </div>
     {% endif %}
 {% endblock %}
