--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -36,8 +36,8 @@
             <div class="col-xl-8">
                 <div id="map" class="map"></div>
             </div>
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css"/>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+            <link rel="stylesheet" href="/static/node_modules/leaflet-draw/dist/leaflet.draw.css"/>
+            <script src="/static/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
             <script src="/static/js/map/map_new.js"></script>
             <script src="/static/js/map/draw_new.js"></script>
         </div>
