Clean up sex estimation

--- a/openatlas/templates/anthropology/index.html
+++ b/openatlas/templates/anthropology/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>{{ _('anthropological analyzes')|uc_first }} - {{ entity.name }}</h1>
     <p>
-        {{ _('sex estimation')|button(url_for('anthropology_sex', id_=entity.id)) }}
+        {{ _('sex estimation')|button(url_for('sex', id_=entity.id)) }}
         {{ result }}
     </p>
 {% endblock %}
